--- a/2011/style.css
+++ b/2011/style.css
@@ -47,6 +47,10 @@ h1#logo {
 	margin: 10px 0;
 }
 
+#social1, #social2, #social3 {
+	float: right;
+}
+
 #eyecatch{
 	margin: 10px 0;
 }
@@ -79,6 +83,7 @@ h2 {
 	font-family: 'Puritan', sans-serif;
 }
 
+/* the-green 140,200,75 */
 
 footer {
 	border-top: solid 1px #000;
@@ -118,7 +123,7 @@ footer {
 	left: 0; 
 	width: 100px; 
 	height: 2px; 
-	background: green;
+	background: #8CC84B;
 }
 .current_page_item a { 
 	color: #000 !important; 
