--- a/2011/style.css
+++ b/2011/style.css
@@ -46,10 +46,14 @@ header {
 }
 
 h1#logo {
-	margin: 0 auto;
-	margin: 10px 0 32px 0;
+	float: left;
+	margin: 15px 0 20px 20px;
 	height: 80px;
-	text-align: center;
+}
+
+#headerInfo {
+	float: right;
+	margin: 10px 50px 0 0;
 }
 
 #social {
@@ -81,33 +85,73 @@ h1#logo {
 	top:3px;
 	right: -82px;
 }
-#eyecatch{
-	margin: 5px 0;
-}
+
+
 #sponsors {
 	margin-bottom: 10px;
 }
 
-/* columns */
+/* columns&rows */
 #col1 {
 	float: left;
 	width: 580px;
-	height: 280px;
-	margin-right: 25px;
 }
-/* 未使用
-	#col2 {
+#col2 {
+	margin-left: 600px;
+	width: 290px;
+}
+
+#row1, #row2 {
 	float: left;
-	width: 290px;
-	margin-right: 25px;
-} */
-#col3 {
-	margin-left: 630px;
-	width: 290px;
+	clear: both;
+	width: 580px;
+	margin-bottom: 21px;
 }
+
+#row2 .speaker {
+	clear: both;
+	float: left;
+}
+
+#row2 h3 {
+	margin: 0;
+	font-weight: bold;
+}
+
+#row2 .imgBox {
+	float: left;
+	width: 120px;
+	height: 120px;
+	margin: 0 15px 20px 0;
+}
+
+#row2 img {
+	width: 100%;
+}
+
+#news {
+	margin-bottom: 25px;
+}
+
+#news ul {
+	height: 120px;
+	overflow: scroll;
+	overflow-x: hidden;
+}
+
+#news ul li {
+	margin-bottom: 8px;
+}
+
+#news span.date {
+	font-size: 9px;
+	color: green;
+	display: block;
+}
+
 h2 {
-	font-size: 28px;
-	font-family: 'Puritan', sans-serif;
+	font-size: 22px;
+	/* font-family: 'Puritan', sans-serif; */
 	padding-bottom: 5px;
 }
 h2 span {
@@ -129,8 +173,45 @@ footer {
 /* navigation menu */
 .nav {
 	margin: 10px auto;
-	font: 18px 'Limelight', cursive;
+	font: 18px, cursive; /* 'Limelight' */
 }
+
+#nav { 
+	margin: 0 auto; 
+	list-style: none; 
+	position: relative; 
+	width: 920px; 
+	clear: both;
+	background: url('images/navBg.png');
+	background-repeat: no-repeat;
+	height: 71px;
+}
+
+#nav li { 
+	display: inline-block;
+	padding-top: 8px;
+}
+
+#nav a {
+	color: #888; 
+	font-size: 17px; 
+	float: left;
+	padding: 7px 35px 0px 35px;
+	text-decoration: none;
+	text-transform: uppercase;
+}
+
+#nav span {
+	font-size: 9px;
+	font-weight: bold;
+	display: block;
+	text-align: center;
+}
+
+.current_page_item a { 
+	color: #000 !important; 
+}
+
 
 /* Clearfix */
 .group:after { visibility: hidden; display: block; content: ""; clear: both; height: 0; }
@@ -179,4 +260,125 @@ footer {
 }
 .ie6 #magic-line {
 	bottom: -3px;
+}
+
+#sliderBg {
+	background: url('images/slider.png');
+	background-repeat: no-repeat;
+	font-size: 14px;
+	color: #fff;
+	height: 160px;
+}
+
+#sliderText {
+	/*position: relative;
+	top: -122px;
+	left: 60px; */
+	margin-top: -122px;
+	margin-left: 60px;
+	width: 600px;
+}
+
+#sliderOwner {
+	margin-left: 760px;
+	margin-top: -50px;
+	font-weight: bold;
+	color: #000;
+	width: 120px;
+	text-align: center;
+}
+#sliderOwner span {
+	font-size: 11px;
+	font-weight: normal;
+}
+
+
+/*
+ * jQuery Nivo Slider v2.6
+ * http://nivo.dev7studios.com
+ *
+ * Copyright 2011, Gilbert Pellegrom
+ * Free to use and abuse under the MIT license.
+ * http://www.opensource.org/licenses/mit-license.php
+ * 
+ * March 2010
+ */
+ 
+ 
+/* The Nivo Slider styles */
+.nivoSlider {
+	position:relative;
+}
+.nivoSlider img {
+	position:absolute;
+	top:0px;
+	left:0px;
+}
+/* If an image is wrapped in a link */
+.nivoSlider a.nivo-imageLink {
+	position:absolute;
+	top:0px;
+	left:0px;
+	width:100%;
+	height:100%;
+	border:0;
+	padding:0;
+	margin:0;
+	z-index:6;
+	display:none;
+}
+/* The slices and boxes in the Slider */
+.nivo-slice {
+	display:block;
+	position:absolute;
+	z-index:5;
+	height:100%;
+}
+.nivo-box {
+	display:block;
+	position:absolute;
+	z-index:5;
+}
+/* Caption styles */
+.nivo-caption {
+	position:absolute;
+	left:0px;
+	bottom:0px;
+	background:#000;
+	color:#fff;
+	opacity:0.8; /* Overridden by captionOpacity setting */
+	width:100%;
+	z-index:8;
+}
+.nivo-caption p {
+	padding:5px;
+	margin:0;
+}
+.nivo-caption a {
+	display:inline !important;
+}
+.nivo-html-caption {
+    display:none;
+}
+/* Direction nav styles (e.g. Next & Prev) */
+.nivo-directionNav a {
+	position:absolute;
+	top:45%;
+	z-index:9;
+	cursor:pointer;
+}
+.nivo-prevNav {
+	left:0px;
+}
+.nivo-nextNav {
+	right:0px;
+}
+/* Control nav styles (e.g. 1,2,3…) */
+.nivo-controlNav a {
+	position:relative;
+	z-index:9;
+	cursor:pointer;
+}
+.nivo-controlNav a.active {
+	font-weight:bold;
 }
