--- a/2011/stylesheets/style.css
+++ b/2011/stylesheets/style.css
@@ -140,8 +140,8 @@ h1#logo {
 }
 
 #sliderText {
-	margin-left: 60px;
-    padding-top: 30px;
+	margin-left: 70px;
+  padding-top: 27px;
 	width: 600px;
 }
 
@@ -181,6 +181,10 @@ h1#logo {
 #row2 .speaker {
 	clear: both;
 	float: left;
+}
+
+.speaker h3 {
+	font-size: 14px;
 }
 
 #row2 h3 {
@@ -241,11 +245,11 @@ h2 span {
 /* フッター START */
 footer {
 	clear: both;
-	padding-top: 12px;
+	padding-top: 14px;
 	font-size: 11px;
 	font-weight: bold;
 	text-align: center;
-	margin: 25px 0;
+	margin: 25px 0 40px 0;
 	background: url('../images/footerLine.png');
 	background-repeat: no-repeat;
 }
