--- a/2011/stylesheets/style.css
+++ b/2011/stylesheets/style.css
@@ -36,6 +36,9 @@ abbr,acronym { border:0;
 }
 /* リセット END */
 
+body {
+	font-family: "ヒラギノ明朝 Pro W3", "Hiragino Mincho Pro", "メイリオ", Meiryo, "ＭＳ ゴシック", sans-serif;
+}
 section, article, aside, footer, header, nav, hgroup {
   display:block;
 }
@@ -108,14 +111,20 @@ h1#logo {
 
 #nav a {
 	color: #888; 
-	font-size: 17px; 
 	float: left;
-	padding: 7px 35px 0px 35px;
+	padding: 9px 10px 0px 10px;
 	text-decoration: none;
-	font-family: "ヒラギノ明朝 Pro W3","Hiragino Mincho Pro", sans-serif;
 }
 #nav a:hover {
 	color: #000;
+}
+
+#nav img {
+  display: block;
+  width: 120px;
+  height: 24px;
+  margin: 0;
+  padding: 0;
 }
 
 #nav span {
@@ -171,7 +180,7 @@ h1#logo {
 	width: 290px;
 }
 
-#row1, #row2 {
+#row1, #row2, #row3 {
 	float: left;
 	clear: both;
 	width: 580px;
@@ -198,8 +207,7 @@ h1#logo {
 	height: 130px;
 	margin: 0 15px 20px 0;
 }
-
-#row2 img {
+#row2 .imgBox img{
 	width: 100%;
 }
 
