--- a/2011/stylesheets/style.css
+++ b/2011/stylesheets/style.css
@@ -62,6 +62,15 @@ h1#logo {
 	margin: 0 50px 0 0;
 }
 
+a {
+	color: #8bbb2d;
+	text-decoration: none;
+}
+a:visited {
+	color: #8bbb2d;
+	text-decoration: none;
+}
+
 /* ソーシャルメディアボタン START */
 #social {
 	float: right;
