--- a/2011/stylesheets/style.css
+++ b/2011/stylesheets/style.css
@@ -63,11 +63,14 @@ h1#logo {
 }
 
 a {
-	color: #8bbb2d;
+	color: green;
 	text-decoration: none;
 }
-a:visited {
+a:hover {
 	color: #8bbb2d;
+}
+a:visited {
+	color: green;
 	text-decoration: none;
 }
 
@@ -214,7 +217,7 @@ a:visited {
 	float: left;
 	width: 130px;
 	height: 130px;
-	margin: 0 15px 20px 0;
+	margin: 0 15px 12px 0;
 }
 #row2 .imgBox img{
 	width: 100%;
