--- a/2011/stylesheets/ticket.css
+++ b/2011/stylesheets/ticket.css
@@ -7,14 +7,6 @@
     font-size: 24px;
 }
 
-.ticket ul{
-   margin-top:20px;
-}
-	
-.ticket ul span{
-	font-weight:bold;
-}
-
 .ticket > p.topnavilink {
     clear: both;
     font-size: 14px;
@@ -22,22 +14,17 @@
 }
 
 .ticket p.description {
-    font-size: 14px;
+    font-size: 16px;
     line-height: 1.5em;
 }
 
-.ticket p.wde {
-   margin-top:20px;
-}
-
 .ticket .doorkeeperContainer {
-    width: 40%;
-    margin: 10px;
+    width: 50%;
+    margin: 20px auto;
     padding: 20px;
     text-align: center;
     border: 2px dotted #e0e0e0;
     background-color: #f9f9f9;
-	float:right;
 }
 
 .ticket .doorkeeperContainer div{
