--- a/2011/stylesheets/ticket.css
+++ b/2011/stylesheets/ticket.css
@@ -7,6 +7,14 @@
     font-size: 24px;
 }
 
+.ticket ul{
+   margin-top:20px;
+}
+
+.ticket ul span{
+  font-weight:bold;
+}
+
 .ticket > p.topnavilink {
     clear: both;
     font-size: 14px;
@@ -14,17 +22,22 @@
 }
 
 .ticket p.description {
-    font-size: 16px;
+    font-size: 14px;
     line-height: 1.5em;
 }
 
+.ticket p.wde {
+   margin-top:20px;
+}
+
 .ticket .doorkeeperContainer {
-    width: 50%;
-    margin: 20px auto;
+    width: 40%;
+    margin: 10px;
     padding: 20px;
     text-align: center;
     border: 2px dotted #e0e0e0;
     background-color: #f9f9f9;
+	float:right;
 }
 
 .ticket .doorkeeperContainer div{
