--- a/2011/stylesheets/sponsors.css
+++ b/2011/stylesheets/sponsors.css
@@ -23,27 +23,30 @@
 }
 
 .sponsors h2 {
-    padding-bottom: 10px;
-    margin-bottom: 10px;
-    padding-left: 45px;
-    border-bottom: 4px solid #eee;
+    margin-bottom: 20px;
+    padding-top: 10px;
+    padding-left: 55px;
+    color: #ffffff;
+    background-color: #336633;
+    background-position: 10px 3px;
+    background-repeat: no-repeat;
     font-size: 28px;
 }
 
 #platinum h2 {
-  background: 5px 0 no-repeat url('../images/sponsors/platinum.png');
+  background-image: url('../images/sponsors/platinum.png');
 }
 
 #gold h2 {
-  background: 5px 0 no-repeat url('../images/sponsors/gold.png');
+  background-image: url('../images/sponsors/gold.png');
 }
 
 #silver h2 {
-  background: 5px 0 no-repeat url('../images/sponsors/silver.png');
+  background-image: url('../images/sponsors/silver.png');
 }
 
 #supporter h2 {
-  background: 5px 0 no-repeat url('../images/sponsors/supporter.png');
+  background-image: url('../images/sponsors/supporter.png');
 }
 
 .sponsors h2 span {
@@ -63,7 +66,9 @@
 
 .sponsors .sponsor li {
     clear: both;
-    padding-bottom: 20px;
+    padding: 10px;
+    margin-bottom: 15px;
+    background-color: #eeffee;
     font-family:'ヒラギノ角ゴ Pro W3','Hiragino Kaku Gothic Pro','メイリオ',Meiryo,'ＭＳ Ｐゴシック',sans-serif;
 }
 
@@ -80,7 +85,7 @@
 .sponsors .sponsor li h3 {
     margin-bottom: 10px;
     padding-left: 5px;
-    border-bottom: 1px solid #eee;
+    border-bottom: 2px solid #336633;
     font-size: 24px;
     font-weight: bold;
 }
