--- a/2011/stylesheets/sponsors.css
+++ b/2011/stylesheets/sponsors.css
@@ -5,18 +5,20 @@
 
 .sponsors nav ul {
     list-style: none;
+    margin: 0 auto;
 }
 
 .sponsors nav ul li {
     display: inline-block;
-    margin-right: 5px;
-    border: 3px solid #eee;
+    margin: 0 3px;
 }
 
 .sponsors nav ul li a {
     display: inline-block;
-    width: 180px;
+    width: 185px;
     padding: 10px 5px;
+    color: #ffffff;
+    background-color: #336633;
     font-size: 20px;
     text-align: center;
     text-decoration: underline;
@@ -24,7 +26,7 @@
 
 .sponsors h2 {
     margin-bottom: 20px;
-    padding-top: 10px;
+    padding-top: 6px;
     padding-left: 55px;
     color: #ffffff;
     background-color: #336633;
