スポンサーロゴの追加

--- a/2011/stylesheets/sponsors.css
+++ b/2011/stylesheets/sponsors.css
@@ -81,7 +81,8 @@
 }
 
 .sponsors .sponsor li .imgBox img {
-    border: 5px solid #eee;
+    background-color: #ffffff;
+    border: 3px solid green;
 }
 
 .sponsors .sponsor li h3 {
