--- a/2011/stylesheets/sponsors_side.css
+++ b/2011/stylesheets/sponsors_side.css
@@ -1,36 +1,28 @@
+#left {
+  float: left;
+  width: 640px;
+}
+
+#right {
+  width: 210px;
+  margin-left: 660px;
+}
+
 #sponsors {
-    width: 240px;
+    width: 180px;
     margin-left: 20px;
     background-color: #eeffee;
 }
 
 #sponsors h2 {
     margin-bottom: 20px;
-    padding-top: 6px;
-    padding-left: 55px;
+    padding: 5px 0;
     color: #ffffff;
     background-color: #336633;
     background-position: 10px 3px;
     background-repeat: no-repeat;
     font-size: 18px;
-}
-
-#platinum h2 {
-  padding-right: 20px;
-  background-image: url('../images/sponsors/platinum.png');
-}
-
-#gold h2 {
-  padding-right: 50px;
-  background-image: url('../images/sponsors/gold.png');
-}
-
-#silver h2 {
-  background-image: url('../images/sponsors/silver.png');
-}
-
-#supporter h2 {
-  background-image: url('../images/sponsors/supporter.png');
+    text-align: center;
 }
 
 #sponsors h2 span {
@@ -46,6 +38,7 @@
 #sponsors ul li {
     padding: 5px;
     text-align: center;
+    vertical-align: top;
 }
 
 #sponsors ul li img {
