--- a/2011/stylesheets/ticket.css
+++ b/2011/stylesheets/ticket.css
@@ -1,6 +1,6 @@
 .ticket {
     clear: both;
-    padding: 10px 60px 0 20px;
+    padding: 10px 0 0 20px;
 }
 
 .ticket h2 {
@@ -31,7 +31,7 @@
 }
 
 .ticket .doorkeeperContainer {
-    width: 40%;
+    width: 300px;
     margin: 10px;
     padding: 20px;
     text-align: center;
