--- a/2011/stylesheets/sponsors.css
+++ b/2011/stylesheets/sponsors.css
@@ -10,13 +10,12 @@
 
 .sponsors nav ul li {
     display: inline-block;
-    margin: 0 3px;
 }
 
 .sponsors nav ul li a {
     display: inline-block;
-    width: 185px;
-    padding: 10px 5px;
+    width: 180px;
+    padding: 10px 10px;
     color: #ffffff;
     background-color: #336633;
     font-size: 20px;
@@ -26,8 +25,7 @@
 
 .sponsors h2 {
     margin-bottom: 20px;
-    padding-top: 6px;
-    padding-left: 55px;
+    padding: 10px 0 10px 55px;
     color: #ffffff;
     background-color: #336633;
     background-position: 10px 3px;
@@ -87,7 +85,7 @@
 
 .sponsors .sponsor li h3 {
     margin-bottom: 10px;
-    padding-left: 5px;
+    padding: 0 0 10px 5px;
     border-bottom: 2px solid #336633;
     font-size: 24px;
     font-weight: bold;
