--- a/2011/stylesheets/style.css
+++ b/2011/stylesheets/style.css
@@ -7,6 +7,7 @@ body {
 	border-top: solid 4px #333;
 	font-size: 12px;
 	color: #333;
+  line-height: 1.5em;
 }
 table {
 	border-collapse:collapse;
@@ -257,6 +258,20 @@ h2 span {
 	font-weight: bold;
 	position: relative;
 	right: 0px;
+}
+
+#left {
+  float: left;
+  width: 640px;
+}
+
+#right {
+  width: 210px;
+  margin-left: 660px;
+}
+
+#right iframe {
+  margin-left: 20px;
 }
 
 /* columns&rows END */
