--- a/2011/stylesheets/style.css
+++ b/2011/stylesheets/style.css
@@ -280,6 +280,7 @@ h2 span {
 /* セッションページ START */
 #sessionTable {
   margin-left: 20px;
+  margin-bottom: 20px;
 }
 table {
 	width: 570px;
@@ -297,7 +298,7 @@ caption {
 	background-repeat: no-repeat;
 }
 .sessionTableBg .speaker {
-    margin-left:140px;
+    margin-left:160px;
 	margin-top: 14px;
 }
 th,td {
